Chart/templates/main-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: main-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/frontend`)
      services:
        - name: rolloutfe
          port: 8980
    - kind: Rule
      match: PathPrefix(`/backend`)
      services:
        - name: calloutqueuebe
          port: 8080
